# wordlesmith

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report---.md  feature-request---.md
.github/workflows/: ci.yml  release.yml
benchmarks/results/official/: curated_all.csv  curated_all.md  curated_answers.csv  curated_answers.md  meta.txt  per_word_curated.csv  per_word_valid.csv  primary_valid.csv  primary_valid.md
docs/: demo.tape  solve.tape  strategies.md
examples/: demo.ipynb
scripts/: bench_one.py  gen_openings.py  run_official_benchmark.py
src/wordlesmith/: __init__.py  benchmark.py  cli.py  feedback.py  game.py  words.py
src/wordlesmith/data/: curated_answers.txt  openings.json  valid_words.txt
src/wordlesmith/strategies/: __init__.py  base.py  entropy.py  expected_size.py  frequency.py  minimax.py  random_guess.py
tests/: test_benchmark.py  test_cli.py  test_feedback.py  test_game.py  test_strategies.py  test_words.py
